[gd_scene load_steps=9 format=2]

[ext_resource path="res://GrayMage.gd" type="Script" id=1]
[ext_resource path="res://Textures/GrayMage.png" type="Texture" id=2]
[ext_resource path="res://Sounds/GrayMageHurt.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="GrayMage" type="Area2D" groups=["damagedByMagic"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="WallDetection" type="RayCast2D" parent="AnimatedSprite"]
enabled = true
cast_to = Vector2( -11, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_GrayMage_body_entered"]
